Ajustando Layout das páginas relacionadas a Postagem e Tema

--- a/src/app/delete/tema-delete/tema-delete.component.html
+++ b/src/app/delete/tema-delete/tema-delete.component.html
@@ -16,14 +16,14 @@
 
         <div class="row mb-4">
             <div class="col-md-12 d-flex justify-content-center">
-                <h5 class="texte-center fs-12">Tema: {{tema.descricaoTema}}</h5>
+                <h5 class="texte-center fs-12 linha">Tema: {{tema.tituloTema}}</h5>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center mb-4">
-                <button class="btn btn-outline-dark mr-4 hr" routerLink="/tema">Não</button>
-                <button class="btn btn-outline-dark hb" (click)="apagar()">Sim</button>
+                <button class="btn hr borda-b txt mr-4" routerLink="/tema">Não</button>
+                <button class="btn hb borda-b txt" (click)="apagar()">Sim</button>
             </div>
         </div>
 
