--- a/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -1,37 +1,39 @@
-<div class="container mb-5 mt-5">
+<div class="bg">
+  <div class="container-fluid">
+    <div class="row">
 
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center text-secondary">Apagar postagem</h1>
+      <div class="col-md-12 mt-5 mb-5">
+        <h1 class="text-center fs-54">Apagar postagem</h1>
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <h4 class="text-center text-secondary">Você tem certeza que deseja apagar essa postagem?</h4>
+    <div class="row mb-4">
+      <div class="col-md-12">
+        <h4 class="text-center fs-18">Você tem certeza que deseja apagar essa postagem?</h4>
+      </div>
     </div>
-  </div>
 
-  <div class="row d-flex justify-content-center mt-4">
-    <div class="col-md-4">
-      <div class="card text-center">
-        <div class="card-body">
-          <h5 class="card-title m-0">{{postagem.tituloPost}}</h5>
-          <small class="text-muted">Tema: {{postagem.tema.descricaoTema}}</small>
-          <p class="card-text mt-3">{{postagem.textoPost}}</p>
-          <p class="card-text"><small class="text-muted">
-              {{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}
-            </small></p>
+    <div class="row mb-4 justify-content-center">
+      <div class="col-md-4">
+        <div class="card text-center">
+          <div class="card-body linha">
+            <h5 class="card-title fs-12 m-0">{{postagem.tituloPost}}</h5>
+            <small class="text f-12">Tema: {{postagem.tema.descricaoTema}}</small>
+            <p class="card-text fs-10 mt-3">{{postagem.textoPost}}</p>
+            <p class="card-text "><small class="text f-12">
+                {{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}
+              </small></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row mt-5">
-    <div class="col-md-12 d-flex justify-content-center">
-      <button class="btn btn-danger mr-4" routerLink='/inicio'>Não</button>
-      <button class="btn btn-success" (click)='apagar()'>Sim</button>
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center mb-4">
+        <button class="btn hr borda-b txt mr-4" routerLink='/inicio'>Não</button>
+        <button class="btn hb borda-b txt" (click)='apagar()'>Sim</button>
+      </div>
     </div>
-  </div>
 
+  </div>
 </div>
