--- a/src/app/delete/tema-delete/tema-delete.component.css
+++ b/src/app/delete/tema-delete/tema-delete.component.css
@@ -2,14 +2,27 @@
     background-color: #F1F2F6;
 }
 
+.txt{
+  color: #6F1E51;
+  font-size: 12pt;
+}
 
 .hb:hover{
-    background-color: #1289A7;
-  }
-  
-  .hr:hover{
-    background-color: crimson;
-  }
+  background-color: #1289A7;
+  color: #ffffff ;
+}
+
+.hr:hover{
+  background-color: crimson;
+  color: #ffffff;
+}
+
+.borda-b{
+  border: 1px solid #6F1E51;
+  background-color: #F1F2F6;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+}
 
   .fs-54{
     font-size: 54pt;
@@ -25,4 +38,12 @@
   .fs-12{
       font-size: 12pt;
       color:#6F1E51;
+  }
+
+  .linha{
+    padding: 20px;
+    background-color: #F1F2F6;
+    border-radius: 5px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.25);
   }
