--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -1,29 +1,29 @@
 <div class="bg">
-    <div class="container-fluid mt-5 mb-5">
-
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <h1 class="txt  mt-5 mb-5">Atualizar postagem</h1>
+
+            <div class="col-md-12 d-flex justify-content-center mt-5 mb-5">
+                <h1 class="ttext-center f-54">Atualizar postagem</h1>
             </div>
         </div>
 
         <div class="row d-flex justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-3 mb-5 linha">
 
                 <div class="form-group txt">
                     <label for="titulo">Título</label>
-                    <input [(ngModel)]="postagem.tituloPost" type="text" class="form-control" id="titulo"
+                    <input [(ngModel)]="postagem.tituloPost" type="text" class="form-control borda" id="titulo"
                         placeholder="Digite o título">
                 </div>
 
                 <div class="form-group txt">
                     <label for="texto">Texto</label>
-                    <textarea [(ngModel)]="postagem.textoPost" name="texto" id="texto" rows="3" class="form-control"></textarea>
+                    <textarea [(ngModel)]="postagem.textoPost" name="texto" id="texto" rows="3" class="form-control borda"></textarea>
                 </div>
 
                 <div class="form-group txt">
                     <label for="texto">Escolha um tema:</label>
-                    <select [(ngModel)]="idTema" name="tema" id="tema" class="form-control" (change)="findByIdTema">
+                    <select [(ngModel)]="idTema" name="tema" id="tema" class="form-control borda" (change)="findByIdTema">
                         <option *ngFor="let item of listaTemas" value="{{item.idTema}}">
                             {{item.descricaoTema}}
                         </option>
@@ -32,9 +32,9 @@
 
                 <div class="d-flex justify-content-center">
 
-                    <button class="btn btn-outline-dark mr-4 hr" routerLink="/inicio">Cancelar</button>
+                    <button class="btn hr borda-b txt mr-4" routerLink="/postagens">Cancelar</button>
 
-                    <button class="btn btn-outline-dark hb" (click)="atualizar()">Atualizar</button>
+                    <button class="btn hb borda-b txt" (click)="atualizar()">Atualizar</button>
 
                 </div>
 
