--- a/src/app/tema/tema.component.css
+++ b/src/app/tema/tema.component.css
@@ -1,9 +1,18 @@
-.fs-54{
+.f-54{
   color: #6F1E51;
   font-size: 54pt;
+  padding-top: 30px;
 }
-.fs-18{
+
+.f-12{
   color: #6F1E51;
+  font-size: 12pt;
+  padding-top: 5px;
+}
+
+.f-18{
+  color: #6F1E51;
+  font-size: 18pt;
 }
 
 .bg{
@@ -12,17 +21,42 @@
 }
 
 .form-group{
-  color:
-  #1289A7;
+  color:#6F1E51;
+}
+
+.txt{
+  color: #6F1E51;
+  font-size: 12pt;
 }
 
 .hb:hover{
   background-color: #1289A7;
+  color: #ffffff ;
 }
 
 .hr:hover{
   background-color: crimson;
+  color: #ffffff;
 }
-.txt{
-  color:#6F1E51;
+
+.borda-b{
+  border: 1px solid #6F1E51;
+  background-color: #F1F2F6;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.borda{
+  border: 1px solid #1289A7;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.linha{
+  padding: 20px;
+  background-color: #F1F2F6;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.25);
 }
