--- a/src/app/bem-vindo/bem-vindo.component.html
+++ b/src/app/bem-vindo/bem-vindo.component.html
@@ -38,7 +38,7 @@
 <!--Bem-Vindo-->
 <div class="container-welcome">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" id="welcome">
       <h1 id="titulo">Seja Bem Vinde ao IndicaJob's</h1>
       <p>A rede social que aproxima as Empresas dos Usuários por meio de Indicações!</p>
     </div>
@@ -53,29 +53,48 @@
 
 <div class="container-sobreNos">
   <div class="row-texto">
-    <div class="col-md-6">
-      <h1>Sobre Nós</h1>
+    <div class="col-md-6" id="text-Sobre">
       <p>O IndicaJob's foi criado para ser apresentado como Projeto Final de grupo da Turma-35 do Curso Bootcamp para
         Desenvolvedores Web Full Stack Java da ONG Generation Brasil. Com o objetivo de apresentar soluções técnológicas
         para alcançar a ODS 8 da ONU: Trabalho Decente e Crescimento Ecônomico. A idéia por trás do Projeto é criar uma
         rede social que consiga unir Empresas que possuam vagas e usuários que possam ser indicados ou que indiquem
-        outros usuários para essas vagas, por meio de postagens. O grupo é composto por: </p>
-      <ol>
-        <li>Bruno Pajtak</li>
-        <li>Drislaine Faro</li>
-        <li>Kathleen Caroline</li>
-        <li>Robson Coura</li>
-        <li>Thaís Pereira</li>
-      </ol>
+        outros usuários para essas vagas, por meio de postagens.</p>
+
     </div>
+      <div class="col-md-6" id="sobre">
+        <h1>Sobre Nós</h1>
+
+      </div>
+    </div>
+  </div>
+  <div class="container-equipe">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-12">
+        <div class="box">
+            <img class="img-fluid rounded-circle"src="../../assets/img/Bruno.jpg" alt="" width="300px">
+            <span>Bruno Pajtak</span>
+          </div>
+          <div class="box">
+          <img class="img-fluid rounded-circle" src="../../assets/img/Dri.jpeg" alt=""  width="300px">
+          <span>Drislaine Faro</span>
+          </div>
+          <div class="box">
+          <img src="../../assets/img/Carol.jpeg" alt="" height="" width="400">
+          <span>Kathleen Caroline</span>
+          </div>
+          <div class="box">
+          <img src="../../assets/img/Robson.jpeg" alt=""  height="400" width="400">
+          <span>Robson Coura</span>
+          </div>
+          <div class="box">
+          <img src="../../assets/img/Thais.jpeg" alt=""  height="400" width="400">
+          <span>Thaís Pereira</span>
+          </div>
 
       </div>
     </div>
   </div>
 
-</div>
 <!--Footer-->
 <footer class="bg text-center text-lg-start">
 
