Implementação do Editar Usuário

--- a/src/app/bem-vindo/bem-vindo.component.html
+++ b/src/app/bem-vindo/bem-vindo.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-6">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Sobre Nós</a>
+            <a class="nav-link active" aria-current="page" href="#text-Sobre">Sobre Nós</a>
           </li>
 
 
@@ -61,39 +61,45 @@
         outros usuários para essas vagas, por meio de postagens.</p>
 
     </div>
-      <div class="col-md-6" id="sobre">
-        <h1>Sobre Nós</h1>
+    <div class="col-md-6" id="sobre">
+      <h1>Sobre Nós</h1>
 
-      </div>
     </div>
   </div>
-  <div class="container-equipe">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="box">
-            <img class="img-fluid rounded-circle"src="../../assets/img/Bruno.jpg" alt="" width="300px">
-            <span>Bruno Pajtak</span>
-          </div>
-          <div class="box">
-          <img class="img-fluid rounded-circle" src="../../assets/img/Dri.jpeg" alt=""  width="300px">
-          <span>Drislaine Faro</span>
-          </div>
-          <div class="box">
-          <img src="../../assets/img/Carol.jpeg" alt="" height="" width="400">
-          <span>Kathleen Caroline</span>
-          </div>
-          <div class="box">
-          <img src="../../assets/img/Robson.jpeg" alt=""  height="400" width="400">
-          <span>Robson Coura</span>
-          </div>
-          <div class="box">
-          <img src="../../assets/img/Thais.jpeg" alt=""  height="400" width="400">
-          <span>Thaís Pereira</span>
-          </div>
+</div>
 
-      </div>
+
+<div class="container-equipe">
+
+  <div class="row mb-4 mt-4">
+    <div class="col-md-12 d-flex justify-content-center">
+
+      <img class="img-fluid rounded-circle" src="../../assets/img/Bruno.jpg" alt="" width="300px">
+      <span>Bruno Pajtak</span>
+
+      <img class="img-fluid rounded-circle" src="../../assets/img/Dri.jpeg" alt="" width="300px">
+      <span>Drislaine Faro</span>
+
+      <img src="../../assets/img/Carol.jpeg" alt="" height="" width="400">
+      <span>Kathleen Caroline</span>
     </div>
   </div>
+</div>
+
+<div class="container-equipe">
+  <div class="row mb-4 mt-4">
+    <div class="col-md-12 d-flex justify-content-center">
+
+      <img src="../../assets/img/Robson.jpeg" alt="" height="400" width="400">
+      <span>Robson Coura</span>
+
+      <img src="../../assets/img/Thais.jpeg" alt="" height="400" width="400">
+      <span>Thaís Pereira</span>
+    </div>
+
+  </div>
+</div>
+
 
 <!--Footer-->
 <footer class="bg text-center text-lg-start">
