--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@
   font-size: 18pt;
 
 }
+
+html{
+  scroll-behavior: smooth;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
