--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -1,56 +1,61 @@
-<div class="container">
-
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Atualizar meu usuário</h1>
-        </div>
-    </div>
-
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-10">
-
-            <div class="form-group ft">
-                <label for="nome">Nome</label>
-                <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome" >
-            </div>
-
-            <div class="form-group ft">
-                <label for="usuario">E-mail</label>
-                <input [(ngModel)]='usuario.email
-                ' class="form-control" type="text" name="usuario" id="usuario" placeholder="email@email.com">
-            </div>
-
-            <div class="form-group ft">
-                <label for="foto">Link da Foto</label>
-                <input [(ngModel)]='usuario.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da Foto">
-            </div>
-
-            <div class="form-group ft">
-                <label for="senha">Senha</label>
-                <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
-            </div>
-
-            <div class="form-group ft">
-                <label for="confirmSenha">Confirmar senha</label>
-                <input [(ngModel)]='usuario.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha"
-                    placeholder="Confirme sua senha">
-            </div>
-
-            <div class="form-group ft">
-                <label for="tipo">Tipo de usuário</label>
-                <select class="form-control" name="tipo" id="tipo" (change)='tipoUsuario($event)' >
-                    <option>Selecione um tipo de usuário:</option>
-                    <option value="normal">Usuário</option>
-                    <option value="normal">Empresa</option>
-                    <option value="adm">Administrador</option>
-                </select>
-            </div>
-
-            <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-danger mr-4" [routerLink]="['/inicio']" routerLinkActive="router-link-active" >Cancelar</button>
-                <button type="submit" class="btn btn-success" (click)='atualizar()'>Atualizar</button>
+<div class="bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center mt-5 mb-3">
+                <h1 class="f-30">Atualizar meu usuário</h1>
             </div>
         </div>
-    </div>
 
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-8 linha mb-5">
+
+                <div class="form-group ft">
+                    <label for="nome">Nome:</label>
+                    <input [(ngModel)]='usuario.nome' class="form-control borda" type="text" name="nome" id="nome"
+                        placeholder="Seu nome">
+                </div>
+
+                <div class="form-group ft">
+                    <label for="usuario">E-mail:</label>
+                    <input [(ngModel)]='usuario.email
+                ' class="form-control borda" type="text" name="usuario" id="usuario" placeholder="email@email.com">
+                </div>
+
+                <div class="form-group ft">
+                    <label for="foto">Link da Foto:</label>
+                    <input [(ngModel)]='usuario.foto' class="form-control borda" type="text" name="foto" id="foto"
+                        placeholder="Link da Foto">
+                </div>
+
+                <div class="form-group ft">
+                    <label for="senha">Senha:</label>
+                    <input (input)='confirmSenha($event)' class="form-control borda" type="password" name="senha" id="senha"
+                        placeholder="Sua senha">
+                </div>
+
+                <div class="form-group ft">
+                    <label for="confirmSenha">Confirmar senha:</label>
+                    <input [(ngModel)]='usuario.senha' class="form-control borda" type="password" name="confirmSenha"
+                        id="confirmSenha" placeholder="Confirme sua senha">
+                </div>
+
+                <div class="form-group ft">
+                    <label for="tipo">Tipo de usuário:</label>
+                    <select class="form-control borda" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
+                        <option>Selecione um tipo de usuário:</option>
+                        <option value="normal">Usuário</option>
+                        <option value="normal">Empresa</option>
+                        <option value="adm">Administrador</option>
+                    </select>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn hr borda-b txt mr-4" [routerLink]="['/inicio']"
+                        routerLinkActive="router-link-active">Cancelar</button>
+                    <button type="submit" class="btn hb borda-b txt" (click)='atualizar()'>Atualizar</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
