--- a/src/app/bem-vindo/bem-vindo.component.html
+++ b/src/app/bem-vindo/bem-vindo.component.html
@@ -15,7 +15,10 @@
 
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
+            <a class="nav-link active" aria-current="page" href="#">Equipe IndicaJob's</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contato">Contato</a>
           </li>
         </ul>
       </div>
@@ -51,7 +54,7 @@
 
 <!--Sobre-Nós-->
 
-<div class="container-sobreNos">
+<div class="container-sobreNos"  id="sobre">
   <div class="row-texto">
     <div class="col-md-6" id="text-Sobre">
       <p>O IndicaJob's foi criado para ser apresentado como Projeto Final de grupo da Turma-35 do Curso Bootcamp para
@@ -61,7 +64,7 @@
         outros usuários para essas vagas, por meio de postagens.</p>
 
     </div>
-    <div class="col-md-6" id="sobre">
+    <div class="col-md-6 d-flex justify-content-center">
       <h1>Sobre Nós</h1>
 
     </div>
@@ -69,32 +72,52 @@
 </div>
 
 
+<div class="container-tituloEquipe">
+  <div class="row ">
+    <div class="col-md-12 d-flex justify-content-center tituloEquipe">
+      <h1 class="text-center">A Equipe IndicaJob's:</h1>
+    </div>
+  </div>
+</div>
 <div class="container-equipe">
 
+
   <div class="row mb-4 mt-4">
-    <div class="col-md-12 d-flex justify-content-center">
-
-      <img class="img-fluid rounded-circle" src="../../assets/img/Bruno.jpg" alt="" width="300px">
-      <span>Bruno Pajtak</span>
-
-      <img class="img-fluid rounded-circle" src="../../assets/img/Dri.jpeg" alt="" width="300px">
-      <span>Drislaine Faro</span>
-
-      <img src="../../assets/img/Carol.jpeg" alt="" height="" width="400">
-      <span>Kathleen Caroline</span>
+    <div class="col-md-12 d-flex justify-content-center align-items-center equipe">
+      <div class="col-md-4 ml-4 d-flex justify-content-center img-equipe">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Bruno.jpg" alt="">
+          <figcaption class="text-center"> Your text </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Dri.jpeg" alt="">
+          <figcaption class="text-center">Drislaine Faro</figcaption>
+        </figure>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center img-equipe">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Carol.jpg" alt="" height="">
+          <figcaption class="text-center">Kathleen Caroline</figcaption>
+        </figure>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="container-equipe">
+
   <div class="row mb-4 mt-4">
-    <div class="col-md-12 d-flex justify-content-center">
-
-      <img src="../../assets/img/Robson.jpeg" alt="" height="400" width="400">
-      <span>Robson Coura</span>
-
-      <img src="../../assets/img/Thais.jpeg" alt="" height="400" width="400">
-      <span>Thaís Pereira</span>
+    <div class="col-md-12 d-flex justify-content-center equipe">
+      <figure>
+        <img class="img-fluid rounded-circle m-5" src="../../assets/img/Robson.jpeg" alt="">
+        <figcaption class="text-center">Robson Coura</figcaption>
+      </figure>
+      <figure>
+        <img class="img-fluid rounded-circle m-5" src="../../assets/img/Thais.jpg" alt="">
+        <figcaption class="text-center">Thaís Pereira</figcaption>
+      </figure>
     </div>
 
   </div>
