--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-nav-bar *ngIf='auth.logado()'></app-nav-bar>
+<app-nav-bar *ngIf="auth.logado()"></app-nav-bar>
 
 <router-outlet></router-outlet>
 
-<app-rodape *ngIf='auth.logado()'></app-rodape>
+<app-rodape *ngIf="auth.logado()"></app-rodape>
