--- a/src/app/bem-vindo/bem-vindo.component.css
+++ b/src/app/bem-vindo/bem-vindo.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap');
-
 #logarBotao{
   border-color: 5px black;
 }
@@ -11,6 +9,7 @@
 
 
 .container-welcome {
+  height: 640px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,6 +105,7 @@ a{
 
 }
 .container-sobreNos{
+  height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -139,10 +139,31 @@ a{
 .container-equipe {
   display: flex;
   justify-content: center;
+  background-color: #F1F2F6;
+}
+.container-tituloEquipe{
+  border-top: 1px solid #1289A7;
+  padding-top: 100px;
+  background-color: #F1F2F6;
+}
+.container-tituloEquipe h1{
+  color: #1289A7;
+  font-size: 50pt;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+figure{
+}
+
+figure img {
+  width: 300px;
+  height: 300px;
+  margin: none;
+  box-sizing: border-box;
+  box-shadow: 10px 2px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
 .box{
   display: inline-block;
-  
+
 }
 /* /Configuração dos ícones */
