--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,135 +1,89 @@
-mat-toolbar {
-  color: #6F1E51E5
-}
-
-.borda{
-  border: 1px solid #1289A7;
-  background-color: #F1F2F6;
-  box-sizing: border-box;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-}
-
-.borda-2{
-  border-top: 1px solid #1289A7;
-  border-bottom: 1px solid #1289A7;
-}
-
-.borda-b{
-  border: 1px solid #6F1E51;
-  background-color: #F1F2F6;
-  box-sizing: border-box;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-}
-
-.modal-title{
-  color: #6F1E51;
-  font-size: 20pt;
-  padding-top: 10px;
-}
-
-.txt{
-  color: #6F1E51;
-  font-size: 12pt;
-}
-
-.hb:hover{
-  background-color: #1289A7;
-  color: #ffffff ;
-}
-
-.hr:hover{
-  background-color: crimson;
-  color: #ffffff;
-}
-
-mat-sidenav {
-margin: 16px;
-position: absolute;
-width: 300px;
-height: 705px;
-border-right: none;
-text-align: center;
-font: Roboto;
-background: #ffffff;
-border-radius: 5px;
-}
-
-mat-sidenav-container{
-  height: calc(100vh - 65px);
-}
-
-.content {
-    width: 800px;
-    height: 800px;
-    border-radius: 10px;
-    margin: 16px;
-    margin-left: 32px;
-
-}
-
-#linhaVertical {
-  width: auto;
-  height: 100px;
-  background: #1289A7;
-  box-sizing: border-box;
-
-}
-.menu-button {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 1rem;
-}
-mat-icon {
-      margin-right: 8px;
+  .borda{
+    border: 1px solid #1289A7;
+    background-color: #F1F2F6;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
   }
-.avatar {
-  position:relative;
-  margin: -80px 0px 0px 0px;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-}
-.name {
-  margin-top: 8px;
-  font-weight: normal;
-}
+  
+  .borda-2{
+    border-top: 1px solid #1289A7;
+    border-bottom: 1px solid #1289A7;
+  }
+  
+  .borda-b{
+    border: 1px solid #6F1E51;
+    background-color: #F1F2F6;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  }
+  
+  .modal-title{
+    color: #6F1E51;
+    font-size: 20pt; 
+  }
+  
+  .txt{
+    color: #6F1E51;
+    font-size: 12pt;
+  }
+  
+  .hb:hover{
+    background-color: #1289A7;
+    color: #ffffff ;
+  }
+  
+  .hr:hover{
+    background-color: crimson;
+    color: #ffffff;
+  }  
+  
+  .content {
+      width: 800px;
+      height: 800px;
+      border-radius: 10px;
+      margin: 16px;
+      margin-left: 32px;
+  
+  }
+  
+  #linhaVertical {
+    width: auto;
+    height: 100px;
+    background: #1289A7;
+    box-sizing: border-box;
+  
+  }  
+  .button{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  
+  .btn-Post{
+    border-radius: 5px;
+    display: flex;
+    flex-direction: end;    
+    width: 500px;
+    height: 40px;
+    border-top: 5px solid #1289A7;
+    border-left: 1px solid #6F1E51E5;
+    border-right: 1px solid #6F1E51E5;
+    border-bottom: 1px solid #6F1E51E5;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  }
 
-.designation {
-  margin-top: 2px;
-  font-size: 25px;
-  color: black;
-  text-align: start;
-  padding-left: 20px;
-}
+  .btn-Post:hover{
+    background-color: #6F1E51;
+    color: #1289A7;
+  }
+  
+  .far {
+    color: #6F1E51E5;
 
-mat-divider {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  background-color: rgba(255, 255, 255, 0.5);
-}
+  }
 
-.button{
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
+  .bg{
+    background-color: #F1F2F6;
+  }
 
-.btn-Post{
-  border-radius: 5px;
-  display: flex;
-  justify-content: flex-end;
-  width: 700px;
-  height: 40px;
-  border-top: 5px solid #1289A7;
-  border-left: 1px solid #6F1E51E5;
-  border-right: 1px solid #6F1E51E5;
-  border-bottom: 1px solid #6F1E51E5;
-  box-sizing: border-box;
-}
-
-.far {
-  color: #6F1E51E5;
-
-}
