--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -12,6 +12,7 @@
                 <input type="search" id="txtBusca" name="busca" class="busca" placeholder="Pesquisar">
             </form>
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/inicio">
                         <i class="fas fa-home"></i>
@@ -19,13 +20,7 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/postagens">
-                        <i class="fas fa-clipboard"></i>
-                        Postagens
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/inicio">
                         <i class="fas fa-building"></i>
@@ -42,8 +37,9 @@
                         {{nome}}
                     </a>
                     <div class="dropdown-menu dp ml-0" id="dropdown" aria-labelledby="navbarDropdown">
-                        <a [routerLink]="['/usuario-edit', idUsuario]" class="dropdown-item"><i
-                                class="fa fa-user-edit"></i>Editar perfil</a>
+                        <a routerLink="/postagens" class="dropdown-item"><i class="fa fa-user-alt"></i> Meu Perfil</a>
+                        <div class="dropdown-divider"></div>
+                        <a [routerLink]="['/usuario-edit', idUsuario]" class="dropdown-item"><i class="fa fa-pen-square"></i> Editar perfil</a>
                         <div class="dropdown-divider"></div>
                         <button class="dropdown-item" (click)="sair()">
                             <i class="fa fa-sign-out-alt mr-2"></i>
