Bem Vindo pronto Inicio v2.0

--- a/src/app/bem-vindo/bem-vindo.component.html
+++ b/src/app/bem-vindo/bem-vindo.component.html
@@ -13,9 +13,14 @@
             <a class="nav-link active" aria-current="page" href="#text-Sobre">Sobre Nós</a>
           </li>
 
-
           <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
+            <a class="nav-link active" aria-current="page" href="#porque">Por que IndicaJob's?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#equipe">Equipe IndicaJob's</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contato">Contato</a>
           </li>
         </ul>
       </div>
@@ -37,7 +42,7 @@
 
 <!--Bem-Vindo-->
 <div class="container-welcome">
-  <div class="row">
+  <div class="row d-flex align-items-center">
     <div class="col-md-6" id="welcome">
       <h1 id="titulo">Seja Bem Vinde ao IndicaJob's</h1>
       <p>A rede social que aproxima as Empresas dos Usuários por meio de Indicações!</p>
@@ -51,7 +56,7 @@
 
 <!--Sobre-Nós-->
 
-<div class="container-sobreNos">
+<div class="container-sobreNos" id="sobre">
   <div class="row-texto">
     <div class="col-md-6" id="text-Sobre">
       <p>O IndicaJob's foi criado para ser apresentado como Projeto Final de grupo da Turma-35 do Curso Bootcamp para
@@ -61,7 +66,7 @@
         outros usuários para essas vagas, por meio de postagens.</p>
 
     </div>
-    <div class="col-md-6" id="sobre">
+    <div class="col-md-6 d-flex justify-content-center">
       <h1>Sobre Nós</h1>
 
     </div>
@@ -69,40 +74,88 @@
 </div>
 
 
+<div class="container-porque" id="porque">
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-md-6">
+      <h1>Por que IndicaJobs's?</h1>
+
+    </div>
+    <div class="col-md-6">
+      <p>Cultivar uma boa rede de contatos (networking) é a estratégia mais eficiente para obter emprego. Uma pesquisa
+        realizada pelo Site de Empregos Catho, que ouviu mais de 53.000 pessoas aponta que 54% dos entrevistados
+        chegaram ao atual posto de trabalho por meio de indicação. Além de ser uma das formas mais praticadas no mercado
+        de trabalho, as Empresas costumam valorizar, e muito, as referências. No entanto, essa é uma via de duas mãos, é
+        muito importante ter cuidado na hora de indicar alguém, pois a performance do indicado pode afetar diretamente
+        na reputação de quem indicou. É para agilizar e otimizar esse processo que o IndicaJob's foi criado!
+
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="container-tituloEquipe" id="equipe">
+  <div class="row ">
+    <div class="col-md-12 d-flex justify-content-center tituloEquipe">
+      <h1 class="text-center">A Equipe IndicaJob's:</h1>
+    </div>
+  </div>
+</div>
 <div class="container-equipe">
 
+
   <div class="row mb-4 mt-4">
-    <div class="col-md-12 d-flex justify-content-center">
-
-      <img class="img-fluid rounded-circle" src="../../assets/img/Bruno.jpg" alt="" width="300px">
-      <span>Bruno Pajtak</span>
-
-      <img class="img-fluid rounded-circle" src="../../assets/img/Dri.jpeg" alt="" width="300px">
-      <span>Drislaine Faro</span>
-
-      <img src="../../assets/img/Carol.jpeg" alt="" height="" width="400">
-      <span>Kathleen Caroline</span>
+    <div class="col-md-12 d-flex justify-content-center align-items-center equipe">
+      <div class="col-md-4 ml-4 d-flex justify-content-center img-equipe">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Bruno.jpg" alt="">
+          <figcaption class="text-center">Bruno Foschini Pajtak
+            <p>Desenvolvedor</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Dri.jpeg" alt="">
+          <figcaption class="text-center">Drislaine Faro
+            <p>Desenvolvedora</p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center img-equipe">
+        <figure>
+          <img class="img-fluid rounded-circle m-5" src="../../assets/img/Carol.jpg" alt="" height="">
+          <figcaption class="text-center">Kathleen Caroline
+            <p>Desenvolvedora</p>
+          </figcaption>
+        </figure>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="container-equipe">
+
   <div class="row mb-4 mt-4">
-    <div class="col-md-12 d-flex justify-content-center">
-
-      <img src="../../assets/img/Robson.jpeg" alt="" height="400" width="400">
-      <span>Robson Coura</span>
-
-      <img src="../../assets/img/Thais.jpeg" alt="" height="400" width="400">
-      <span>Thaís Pereira</span>
+    <div class="col-md-12 d-flex justify-content-center equipe">
+      <figure>
+        <img class="img-fluid rounded-circle m-5" src="../../assets/img/Robson.jpeg" alt="">
+        <figcaption class="text-center">Robson Coura
+          <p>Desenvolvedor</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img class="img-fluid rounded-circle m-5" src="../../assets/img/Thais.jpg" alt="">
+        <figcaption class="text-center">Thaís Pereira
+          <p>Desenvolvedora</p>
+        </figcaption>
+      </figure>
     </div>
 
   </div>
 </div>
-
 
 <!--Footer-->
-<footer class="bg text-center text-lg-start">
+<footer id="contato" class="bg text-center text-lg-start">
 
   <div id="linha-horizontal">
     <div class="container contact-box pt-2 d-flex justify-content-center">
