--- a/src/app/bem-vindo/bem-vindo.component.css
+++ b/src/app/bem-vindo/bem-vindo.component.css
@@ -11,6 +11,7 @@
 
 
 .container-welcome {
+  height: 640px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,6 +38,7 @@
 }
 #welcome{
   padding-right: 100px;
+  width: 900px;
 }
 .row-texto{
   display: flex;
@@ -106,6 +108,7 @@ a{
 
 }
 .container-sobreNos{
+  height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -140,9 +143,60 @@ a{
   display: flex;
   justify-content: center;
 }
+.container-tituloEquipe{
+  border-top: 1px solid #1289A7;
+  padding-top: 100px;
+}
+.container-tituloEquipe h1{
+  color: #1289A7;
+  font-size: 50pt;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+figure{
+}
+
+figure img {
+  width: 300px;
+  height: 300px;
+  margin: none;
+  box-sizing: border-box;
+  box-shadow: 10px 2px 5px 5px rgba(0, 0, 0, 0.25);
+}
+figcaption{
+  font-size: 20px;
+  color: #6F1E51;
+  font-family: 'Montserrat Alternates', sans-serif;
+
+}
 
 .box{
   display: inline-block;
-  
+
+}
+
+.container-porque{
+  background-color: #F1F2F6;
+
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  background-color: #FFFFFF;
+  border-top: 1px solid #1289A7;
+}
+
+.container-porque h1{
+  color: #1289A7;
+  font-size: 54pt;
+  font-family: 'Montserrat Alternates', sans-serif;
+  line-height: 60px;
+}
+
+.container-porque p {
+  text-align: justify;
+  font-size: 24px;
+  line-height: 30px;
+  color: #6F1E51;
 }
 /* /Configuração dos ícones */
