--- a/src/app/login-cadastrar/login-cadastrar.component.html
+++ b/src/app/login-cadastrar/login-cadastrar.component.html
@@ -65,7 +65,7 @@
                             <option>Selecione um tipo de Usuário:</option>
                             <option value="normal">Usuário</option>
                             <option value="empresa">Empresa</option>
-                            <option value="Admin">Administrador</option>
+                            <option value="adm">Administrador</option>
                           </select>
                         </div>
                         <a type="submit" class="btn mt-2" (click)='cadastrar()'>Cadastrar</a>
